tests/ui/pattern/box-pattern-trait-object-deref-error.stderr
error[E0033]: type `Box<(dyn MyTrait + 'static)>` cannot be dereferenced
  --> $DIR/box-pattern-trait-object-deref-error.rs:15:25
   |
LL |         TraitWrapper::A(box ref map) => map,
   |                         ^^^^^^^^^^^ type `Box<(dyn MyTrait + 'static)>` cannot be dereferenced

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0033`.
